--- a/src/app/common/component/tabs/tabs.component.html
+++ b/src/app/common/component/tabs/tabs.component.html
@@ -1,1 +1,11 @@
-<p>tabs works!</p>
+<ul class="nav nav-tabs" id="navTab" role="tablist">
+  <li class="nav-item" *ngFor="let tab of tabs">
+    <a class="nav-link" id="{{tab.id}}-tab" data-toggle="tab" href="#{{tab.id}}" role="tab" aria-controls="{{tab.id}}"
+      aria-selected="true">{{tab.id}}</a>
+  </li>
+</ul>
+<div class="tab-content" id="navTabContent">
+  <div class="tab-pane fade" id="{{tab.id}}" role="tabpanel" aria-labelledby="{{tab.id}}-tab" *ngFor="let tab of tabs">
+    {{tab}}
+  </div>
+</div>
