--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-tabs>
-  <app-tab tabId="abc" [content]="abc">
+  <app-tab tabId="abc">
     <ng-template #abc>abc</ng-template>
   </app-tab>
-  <app-tab tabId="xyz" [content]="xyz">
+  <app-tab tabId="xyz">
     <ng-template #xyz>xyz</ng-template>
   </app-tab>
 </app-tabs>
