--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
-<app-tabs>
-  <app-tab tabId="abc">
-    <ng-template #abc>abc</ng-template>
-  </app-tab>
-  <app-tab tabId="xyz">
-    <ng-template #xyz>xyz</ng-template>
-  </app-tab>
-</app-tabs>
+<div class="rootClass">
+  <app-child-one></app-child-one>
+  <app-child-two></app-child-two>
+</div>
