--- a/src/app/date/date.component.html
+++ b/src/app/date/date.component.html
@@ -1,1 +1,3 @@
-<p>date works!</p>
+<dp-date-picker id="datePicker" name="datePicker" [theme]="'dp-material'" [(ngModel)]="date" [config]="datePickerConfig"
+  (onSelect)="trimArray($event)">
+</dp-date-picker>
