--- a/src/app/slick-grid/slick-grid.component.html
+++ b/src/app/slick-grid/slick-grid.component.html
@@ -1,8 +1,8 @@
-<div id="demo-container" class="container-fluid">
+<!-- <div id="demo-container" class="container-fluid">
   <h2>{{title}}</h2>
   <div class="subtitle" [innerHTML]="subTitle"></div>
 
   <angular-slickgrid gridId="grid2" [columnDefinitions]="columnDefinitions" [gridOptions]="gridOptions"
     [dataset]="dataset" (onAngularGridCreated)="angularGridReady($event)">
   </angular-slickgrid>
-</div>
+</div> -->
