Date Component works

--- a/src/app/child-one/child-one.component.html
+++ b/src/app/child-one/child-one.component.html
@@ -1,6 +1,7 @@
 <div class="card">
     <div class="card-header"><b>CHILD 1</b></div>
     <div class="card-body">
-        <app-date></app-date>
+        <app-date name="dateComponent" id="dateComponent" [(ngModel)]="date"></app-date>
     </div>
+    {{date}}
 </div>
