--- a/src/app/child-two/child-two.component.html
+++ b/src/app/child-two/child-two.component.html
@@ -1,4 +1,9 @@
 <div class="card">
   <div class="card-header"><b>CHILD 2</b></div>
-  <div class="card-body"></div>
+  <div class="card-body">
+    <app-tabs>
+      <app-tab tabId="abc" tabHeader="abc">adfadbc</app-tab>
+      <app-tab tabId="xyz" tabHeader="xyz">xyzdsafdsaf</app-tab>
+    </app-tabs>
+  </div>
 </div>
