--- a/src/app/common/component/tabs/tabs.component.html
+++ b/src/app/common/component/tabs/tabs.component.html
@@ -1,4 +1,4 @@
-<!-- <ul class="nav nav-tabs" id="navTab" role="tablist">
+<ul class="nav nav-tabs" id="navTab" role="tablist">
   <li class="nav-item" *ngFor="let tab of tabs; let index=index">
     <a class="nav-link" [ngClass]="index == 0 ? 'active' : ''" id="{{tab.tabId}}-tab" data-toggle="tab" href="#{{tab.tabId}}" role="tab" [attr.aria-controls]="tab.tabId"
       aria-selected="true">{{tab.tabId}}</a>
@@ -9,7 +9,7 @@
     [attr.aria-labelledby]="tab.tabId+'-tab'" *ngFor="let tab of tabs; let index=index">
      <ng-container [ngTemplateOutlet]="tab.content"></ng-container>
   </div>
-</div> -->
-<div *ngFor="let tab of tabs">
-  <ng-container [ngTemplateOutlet]="tab.content"></ng-container>
 </div>
+<!-- <div *ngFor="let tab of tabs">
+  <ng-container [ngTemplateOutlet]="tab.content"></ng-container>
+</div> -->
