reactive module added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="rootClass">
+<!-- <div class="rootClass">
   <app-child-one></app-child-one>
   <app-child-two></app-child-two>
-</div>
+</div> -->
 <router-outlet></router-outlet>
