--- a/src/app/date/date.component.html
+++ b/src/app/date/date.component.html
@@ -1,3 +1,10 @@
-<dp-date-picker id="datePicker" name="datePicker" [theme]="'dp-material'" [(ngModel)]="date" [config]="datePickerConfig"
+<!-- <dp-date-picker id="datePicker" name="datePicker" [theme]="'dp-material'" [(ngModel)]="date" [config]="datePickerConfig"
   (onSelect)="readValue($event)" (blur)="onBlur()" #datepicker>
-</dp-date-picker>
+</dp-date-picker> -->
+
+<mat-form-field appearance="fill">
+  <mat-label>Choose a date</mat-label>
+  <input matInput [matDatepicker]="picker">
+  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+  <mat-datepicker #picker></mat-datepicker>
+</mat-form-field>
